--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "server": "ts-node-dev ./src/server.ts",
+    "server": "ts-node-dev --files ./src/server.ts",
     "lint": "eslint --ext .ts",
     "start": "node build/server.js"
   },
   "author": "Paul Firmin",
   "license": "ISC",
   "dependencies": {
-    "D": "^1.0.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
@@ -22,7 +21,10 @@
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.10.3",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
