--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "tsc": "tsc",
     "server": "ts-node-dev --files ./src/server.ts",
     "lint": "eslint --ext .ts",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "author": "Paul Firmin",
   "license": "ISC",
@@ -31,6 +33,7 @@
     "@types/mongoose": "^5.10.3",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "concurrently": "^5.3.0",
     "eslint": "^7.19.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
