--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/mongoose": "^5.10.3",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "concurrently": "^5.3.0",
     "eslint": "^7.19.0",
     "ts-node-dev": "^1.1.1",
