--- a/package.json
+++ b/package.json
@@ -15,18 +15,15 @@
   "author": "Paul Firmin",
   "license": "ISC",
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/pickers": "^3.2.10",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
@@ -42,6 +39,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "concurrently": "^5.3.0",
     "eslint": "^7.19.0",
+    "jest-styled-components": "^7.0.3",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
