--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,9 @@
     "axios": "^0.21.1",
     "date-fns": "^2.17.0",
     "react": "^17.0.1",
-    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
