--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "react-responsive": "^8.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -39,7 +40,6 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "concurrently": "^5.3.0",
     "eslint": "^7.19.0",
-    "jest-styled-components": "^7.0.3",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
