--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.17.0",
     "react": "^17.0.1",
+    "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-responsive": "^8.2.0",
