--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --ext .ts",
     "start": "node build/server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "postinstall": "tsc && npm install --prefix client && npm run build --prefix client"
   },
   "author": "Paul Firmin",
   "license": "ISC",
