--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.15",
-    "react-responsive": "^8.2.0"
-  },
-  "devDependencies": {
+    "react-responsive": "^8.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
@@ -38,10 +36,15 @@
     "@types/mongoose": "^5.10.3",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "concurrently": "^5.3.0",
     "eslint": "^7.19.0",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
+    "ts-node-dev": "^1.1.1"
+  },
+  "engines": { 
+    "node": "14.11.3" 
   }
 }
