--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node build/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "postinstall": "tsc && npm install --prefix client && npm run build --prefix client"
+    "postinstall": "tsc && npm install --prefix client && INLINE_RUNTIME_CHUNK=FALSE npm run build --prefix client"
   },
   "author": "Paul Firmin",
   "license": "ISC",
